--- a/courseStyle.css
+++ b/courseStyle.css
@@ -569,6 +569,6 @@ body.view-in-course .wrapper-course-material .course-material .course-tabs {
     display: inline-block;
 }
 
-.checkwithpic1 fieldset {
+/*.checkwithpic1 fieldset {
     direction: ltr;
-}
+}*/
