--- a/accordion.css
+++ b/accordion.css
@@ -1,3 +1,12 @@
+:root {
+    --borderRadius: 0;
+    --borderRadius2: 5px;
+    --color1: #FFBD35;
+    --color2: #282C2E;
+    --color3: #502064;
+    --color4: #0078AA;
+}
+
 .tableout {
     border: solid 0px #142654 !important;
     width: 100%;
@@ -76,8 +85,8 @@ table tr:hover {
 }
 
 .accordion2 {
-    background-color: white;
-    color: #142654;
+    background-color: var(--color4);
+    color: #FFF;
     font-weight: bold;
     cursor: pointer;
     padding: 5px 18px 5px 5px;
@@ -89,7 +98,7 @@ table tr:hover {
     transition: 0.4s;
     margin-top: 10px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
-    border: #142654 solid 2px;
+    border: var(--color4) solid 2px;
     border-radius: 15px;
     line-height: 2.8em !important;
 }
@@ -103,9 +112,9 @@ table tr:hover {
 
 .accordion2.active,
 .accordion2:hover {
-    background-color: #fcc02eff;
-    color: #142654;
-    border: #142654 solid 2px;
+    background-color: var(--color3);
+    color: #FFF;
+    border: var(--color3) solid 2px;
 }
 
 .accordion2.active {
@@ -238,7 +247,7 @@ div.panel3.show {
 }
 
 .accplus {
-    color: #142654;
+    color: #FFF;
     float: left;
     font-size: 17pt !important;
     margin-left: 5%;
