--- a/courseStyle.css
+++ b/courseStyle.css
@@ -300,6 +300,11 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
     padding: 0 20px;
 }
 
+.course-wrapper .course-content .text-container {
+    padding: 0 20px;
+}
+
+
 /* TITLES */
 
 /* main title */
