--- a/courseStyle.css
+++ b/courseStyle.css
@@ -285,6 +285,7 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 .second-title {
     border-bottom: 2px dashed var(--color1);
     display: inline-block;
+        padding: 0 20px;
 
 }
 
