--- a/courseStyle.css
+++ b/courseStyle.css
@@ -300,22 +300,41 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
     list-style-image: url('https://courses.campus.gov.il/asset-v1:Labor+GOV_260T_CommunalDriver_HE+2022_1+type@asset+block@Sign.png');
 }
 
+.icons-list li:nth-child(1)::marker{
+ width: 10px;
+}
+
 .icons-list li:nth-child(2){
     list-style-image: url('https://courses.campus.gov.il/asset-v1:Labor+GOV_260T_CommunalDriver_HE+2022_1+type@asset+block@seat_balt.png');
+}
+
+.icons-list li:nth-child(2)::marker{
+ width: 10px;
 }
 
 .icons-list li:nth-child(3){
     list-style-image: url('https://courses.campus.gov.il/asset-v1:Labor+GOV_260T_CommunalDriver_HE+2022_1+type@asset+block@car.png');
 }
 
+.icons-list li:nth-child(3)::marker{
+ width: 10px;
+}
+
 .icons-list li:nth-child(4){
     list-style-image: url('https://courses.campus.gov.il/asset-v1:Labor+GOV_260T_CommunalDriver_HE+2022_1+type@asset+block@passenger.png');
+}
+
+.icons-list li:nth-child(4)::marker{
+ width: 10px;
 }
 
 .icons-list li:nth-child(5){
     list-style-image: url('https://courses.campus.gov.il/asset-v1:Labor+GOV_260T_CommunalDriver_HE+2022_1+type@asset+block@passenger.png');
 }
 
+.icons-list li:nth-child(5)::marker{
+ width: 10px;
+}
 
 /*.course-wrapper .course-content .text-container p {
     padding: 0 20px;
