--- a/courseStyle.css
+++ b/courseStyle.css
@@ -301,7 +301,8 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 }
 
 .icons-list li:nth-child(1)::marker{
- width: 3px;
+ width: 3px !important;
+ height: 3px !important;
 }
 
 .icons-list li:nth-child(2){
@@ -309,7 +310,8 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 }
 
 .icons-list li:nth-child(2)::marker{
- width: 3px;
+ width: 3px !important;
+    height: 3px !important;
 }
 
 .icons-list li:nth-child(3){
@@ -317,7 +319,8 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 }
 
 .icons-list li:nth-child(3)::marker{
- width: 3px;
+ width: 3px !important;
+    height: 3px !important;
 }
 
 .icons-list li:nth-child(4){
@@ -325,7 +328,8 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 }
 
 .icons-list li:nth-child(4)::marker{
- width: 3px;
+ width: 3px !important;
+    height: 3px !important;
 }
 
 .icons-list li:nth-child(5){
@@ -333,7 +337,8 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 }
 
 .icons-list li:nth-child(5)::marker{
- width: 3px;
+ width: 3px !important;
+    height: 3px !important;
 }
 
 .icons-list li:nth-child(6){
@@ -341,7 +346,8 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 }
 
 .icons-list li:nth-child(6)::marker{
- width: 3px;
+ width: 3px !important;
+    height: 3px !important;
 }
 
 .icons-list li:nth-child(7){
@@ -349,7 +355,8 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 }
 
 .icons-list li:nth-child(7)::marker{
- width: 3px;
+ width: 3px !important;
+    height: 3px !important;
 }
 
 .icons-list li:nth-child(8){
@@ -357,7 +364,8 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 }
 
 .icons-list li:nth-child(8)::marker{
- width: 3px;
+width: 3px !important;
+    height: 3px !important;
 }
 
 .icons-list li:nth-child(9){
@@ -365,7 +373,8 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 }
 
 .icons-list li:nth-child(9)::marker{
- width: 3px;
+width: 3px !important;
+    height: 3px !important;
 }
 
 /*.course-wrapper .course-content .text-container p {
