--- a/courseStyle.css
+++ b/courseStyle.css
@@ -305,6 +305,10 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 
 width: 34px;
 }
+.icons-list li span {
+
+margin-left: 10px;
+}
 /*
 .icons-list li:nth-child(1){
     list-style-image: url('https://courses.campus.gov.il/asset-v1:Labor+GOV_260T_CommunalDriver_HE+2022_1+type@asset+block@list_1.png');
