--- a/courseStyle.css
+++ b/courseStyle.css
@@ -306,7 +306,7 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 width: 34px;
 }
 .icons-list li span {
-
+width: 50px;
 margin-left: 10px;
 }
 /*
