--- a/courseStyle.css
+++ b/courseStyle.css
@@ -213,7 +213,7 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 .second-title-bold {
     border-bottom: 2px dashed var(--color4);
     display: inline-block;
-
+color: var(--color4);
 }
 
 .course-wrapper .course-content .vert-mod>div ul.weel-list {
