--- a/courseStyle.css
+++ b/courseStyle.css
@@ -724,6 +724,12 @@ body.view-in-course .wrapper-course-material .course-material .course-tabs {
     font-weight: 700;
 }
 
+
+.xblock--drag-and-drop .problem #31bc227d2aab49699452eb9467e9e4b6-problem-progress p::after {
+    content: 'בחרו את הפעולות הנכונות וסדרו אותן לפי הסדר: ';
+    display: inline-block;
+}
+
 .xblock-student_view-drag-and-drop-v2, .xmodule_display.xmodule_ProblemBlock div.problem {
   padding:10px;
     border: 4px solid #777 !important;
