--- a/courseStyle.css
+++ b/courseStyle.css
@@ -725,7 +725,7 @@ body.view-in-course .wrapper-course-material .course-material .course-tabs {
 }
 
 
-#31bc227d2aab49699452eb9467e9e4b6-problem-progress .problem p::after {
+.xblock xblock-student_view xblock-student_view-drag-and-drop-v2 xblock-initialized .problem p::after {
     content: 'בחרו את הפעולות הנכונות וסדרו אותן לפי הסדר: ';
     display: inline-block;
 }
