--- a/courseStyle.css
+++ b/courseStyle.css
@@ -937,3 +937,8 @@ p.pattern-library-shim.alert-copy {
 .xmodule_display.xmodule_VideoBlock .video .subtitles .subtitles-menu li {
     color: white;
 }
+
+.xmodule_display.xmodule_VideoBlock .video .subtitles .subtitles-menu li span {
+    display: block;
+    color: white;
+}
