--- a/courseStyle.css
+++ b/courseStyle.css
@@ -956,4 +956,9 @@ p.pattern-library-shim.alert-copy {
   .xmodule_display.xmodule_VideoBlock .video .subtitles .subtitles-menu li.spacing {
     direction: rtl;
 }
- 
+
+.xmodule_display.xmodule_VideoBlock .video .subtitles .subtitles-menu li span {
+    display: block;
+    color: white;
+    direction: rtl;
+}
