--- a/courseStyle.css
+++ b/courseStyle.css
@@ -108,7 +108,7 @@ body .course-content .bookmark-button-wrapper .bookmark-button {
 
 
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper .closed-captions.is-visible {
-    color: #f3f3f3;
+    color: #f3f3f3 !important;
 }
 
 
@@ -955,9 +955,7 @@ p.pattern-library-shim.alert-copy {
     direction: ltr;
 }
   
-    .xmodule_display.xmodule_VideoBlock .video .video-wrapper .closed-captions.is-visible {
-    direction: ltr;
-}
+
 
   .xmodule_display.xmodule_VideoBlock .video .subtitles .subtitles-menu li.spacing {
     direction: rtl;
@@ -969,9 +967,7 @@ p.pattern-library-shim.alert-copy {
     direction: rtl;
 }
 
-.xmodule_display.xmodule_VideoBlock .video .video-wrapper .closed-captions.is-visible {
-    direction: rtl !important;
-}
+
 
 
 button.sequence-nav-button.button-next{
