--- a/courseStyle.css
+++ b/courseStyle.css
@@ -1013,4 +1013,7 @@ span.sequence-nav-button-label {
 span.icon.fa.fa-chevron-prev {
     color: black;
 }
-
+.xmodule_display.xmodule_SequenceBlock .sequence-nav-button.focused, .xmodule_display.xmodule_SequenceBlock .sequence-nav-button:hover, .xmodule_display.xmodule_SequenceBlock .sequence-nav-button:active, .xmodule_display.xmodule_SequenceBlock .sequence-nav-button.active, .xmodule_display.xmodule_SequenceBlock .sequence-nav button.focused, .xmodule_display.xmodule_SequenceBlock .sequence-nav button:hover, .xmodule_display.xmodule_SequenceBlock .sequence-nav button:active, .xmodule_display.xmodule_SequenceBlock .sequence-nav button.active {
+    border-bottom: 3px solid #502064;
+    background-color: #fffefe;
+}
