--- a/courseStyle.css
+++ b/courseStyle.css
@@ -1041,3 +1041,93 @@ span.icon.fa.fa-chevron-prev {
     display: inline;
     content: "תשובה: " !important;
 }
+
+
+  .box {
+  padding: 35px;
+  border: 2px solid #fff;
+  border-radius: 20px/50px;
+  background-clip: padding-box;
+
+}
+
+.popup-button {
+  font-size: 1em;
+  padding: 10px;
+  color: white !important;
+  background-image:url('//courses.campus.gov.il/assets/courseware/v1/d7535234f256d7ec8c6f25e4312cba27/asset-v1:Labor+GOV_260T_CommunalDriver_HE+2022_1+type@asset+block/roads6.svg');
+  background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: left 50%;
+background-color: #0078AA;
+  border-radius: 20px/50px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+.popup-button:hover {
+
+   background-image:url('//courses.campus.gov.il/assets/courseware/v1/d7535234f256d7ec8c6f25e4312cba27/asset-v1:Labor+GOV_260T_CommunalDriver_HE+2022_1+type@asset+block/roads6.svg');
+  background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: left 50%;
+background-color: #502064;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+
+.popup h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
+}
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+.popup .close:hover {
+  color: #06D85F;
+}
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+}
+
+@media screen and (max-width: 700px){
+  .box{
+    width: 70%;
+  }
+  .popup{
+    width: 70%;
+  }
+}
