--- a/courseStyle.css
+++ b/courseStyle.css
@@ -1131,3 +1131,17 @@ background-color: #502064;
     width: 70%;
   }
 }
+
+
+/*delete after*/
+
+
+
+.unanswered {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+
+
+
