--- a/courseStyle.css
+++ b/courseStyle.css
@@ -800,13 +800,26 @@ div#word_cloud_61d68f1d19e44254a2bbc6f8726da0ee_instructions {
   }
  
   .xmodule_display.xmodule_ProblemBlock div.problem .action .problem-action-btn{
- margin-left: 20px;
+    margin-left: 20px;
     width: 120px;
     height: 40px;
     background: #eee;
     max-width: 120px;
+    margin-top: 0;
   }
-   
+
+.xmodule_display.xmodule_ProblemBlock div.problem .action .submission-feedback {
+    margin-left: 10px;
+    margin-top: 10px;
+    display: inline;
+    color: #5e5e5e;
+    font-size: 0.9em;
+    -webkit-font-smoothing: antialiased;
+    vertical-align: middle;
+    /* margin-right: 220px !important; */
+    width: 200px;
+    padding-right: 15px !important;
+}
  .xmodule_display.xmodule_ProblemBlock div.problem .action .problem-action-buttons-wrapper,
   .xmodule_display.xmodule_ProblemBlock div.problem .action .submit-attempt-container{
   padding:0;
